# algo-park-vk-edu

./: .gitignore  README.md
module1/: hints.txt
module1/RK1/: a.out  ex1.cpp  ex2  ex2.cpp
module1/ex1_2/: exe
module1/ex1_4/: main  main.cpp
module1/ex2_1/: CMakeLists.txt  c.cpp  cpy.cpp  ex2_1.cpp  for_contest.cpp
module1/ex3/: a.out  main  main.cpp
module1/ex4/: CMakeLists.txt  check.sh  executable  for_contest.cpp  go.sh  sol
module1/ex5/: executable  main  main.cpp
module1/ex6/: WEB11_Zubkov_ex6_2 copy.cpp  WEB11_Zubkov_ex6_2.cpp  exe  final.cpp  gen  gen.cpp  main  main copy  main copy.cpp  main.cpp  test.cpp
module1/sems/: sem2.cpp  sem2cpy.cpp
module1/test/: comp.cpp  heap.hpp
module2/AVL_tree(ex4_2)/: main.cpp
module2/RK/: ex1.cpp  ex2.cpp
module2/ex1_2/: 005  WEB11_Zubkov_ex1_2_intermediate.cpp  copy.cpp  edited copy.cpp  edited.cpp  exe  execpy  executable  gen  gen_simple.cpp  log.txt  main  main.cpp  main_upd copy.cpp  main_upd.cpp  ok1.cpp  ok2.cpp  ok3.cpp  res.txt  text.txt
module2/ex2_1/: ex2_1  main.cpp
module2/ex4_2/: exe  for contest.cpp  main.cpp
module2/sem1/: a.out  main.cpp
module2/sem2/: main.cpp
module3/: .clang-format  ex1_Zubkov.rar  ex2_Zubkov.rar  hints.txt
module3/ex1/: CMakeLists.txt
module3/ex1/IGraph/: CMakeLists.txt
module3/ex1/ListGraph/: CMakeLists.txt
module3/ex1/ListGraph/src/: ListGraph.cpp
module3/ex1/src/: main.cpp
module3/graph_views/: CMakeLists.txt  main.cpp
module3/graph_views/include/: MatrixGraph.hpp  SetGraph.hpp
module3/graph_views/src/: ListGraph.cpp  SetGraph.cpp
(+67 files in other folders)
